WIP: remove multi-tenancy feature
With our optional multi-tenancy feature, requests to Q came in on subdomains of a "landing domain." The subdomain determined which Organization in the database the request would be associated with. All resources shown on the subdomain were Organization specific and were limited to individuals who had authorization to see that Organization's resources.

This commit removes multi-tenancy. All pages are served on the same domain.

TODO:
* Finish settings page. Check that request.organization is no longer used.

changes to pages:

* the nav bar no longer shows the current organization since pages are no longer organization-specific
* the page at /, when the user is logged out, now shows the old landing domain's homepage instead of the organization-specific homepage, but links around org names (when logged in) are removed because orgs no longer have landing pages
* the projects page now shows projects across all of a user's organizations, various functions that returned resources specific to an organization now don't filter by organization
* the apps catalog, which was organization-specific, now merges the catalogs all all of the organizations that the user is nominally a part of
* if the user is a part of more than one organization, the user must choose which organization to start an app in (and the quick Add button on the catalog is hidden in that case --- the user needs to go to the app details page to choose the organization)

changes to URLs:

* absolute URLs to user-uploaded media now use SITE_ROOT_URL instead of organization subdomains
* the landing domain URLs are moved into the main urlconf (except the ones that were duplicated in both urlconfs because they appeared on both domains)
* revise API URLs to no longer have the organization in the path (we can put it back if it was nice, but it no longer serves a functional purpose)

changes to models, tests, documentation:

* Organizations now have 'slug' instead of 'subdomain'. get_

--- a/templates/app-store.html
+++ b/templates/app-store.html
@@ -175,12 +175,20 @@ h2 {
               <span class="glyphicon glyphicon-info-sign"> </span>
               Info
           </a>
+
+          {# If the user can only start the app in a single organization context, we can offer a quick start button. #}
+          {% if app.organizations|length == 1 %}
           <form action="/store/{{app.key|urlencode}}{{forward_qsargs}}" method="post" style="display: inline-block;">
             {% csrf_token %}
+            {% with app.organizations|first as first_org %}
+              <input type="hidden" name="organization" value="{{first_org.slug}}">
+            {% endwith %}
             <button type="submit" class="btn btn-success btn-sm start-app">
               Add ►
             </button>
           </form>
+          {% endif %}
+
           </div>
         </td>
 
