--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>{% block title %}{% block head_title %}{% endblock %}{% endblock %} - {% firstof request.organization.name request.get_host %} on GovReady Q</title>
+        <title>{% block title %}{% block head_title %}{% endblock %}{% endblock %} - GovReady-Q</title>
 
         {% comment %}
         <meta name="description" content="">
