--- a/templates/app-store-item.html
+++ b/templates/app-store-item.html
@@ -56,7 +56,24 @@
 
       <form method="post" style="margin: 1em; text-align: center;">
         {% csrf_token %}
-        <button id="start-project" type="submit" class="btn btn-success">
+
+        {# If the user is a member of more than one organization that can start this app, the user much choose which organization context to start this app in. #}
+        {% if app.organizations|length == 1 %}
+          {% with app.organizations|first as first_org %}
+            <input type="hidden" name="organization" value="{{first_org.slug}}">
+          {% endwith %}
+        {% else %}
+          <div style="margin-bottom: 1em">
+            <label for="add-to-org" style="font-weight: normal; margin: 0; font-size: 90%;">Add to:</label>
+            <select id="add-to-org" name="organization" class="form-control">
+              {% for org in app.organizations %}
+                <option value="{{org.slug}}">{{org.name}}</option>
+              {% endfor %}
+            </select>
+          </div>
+        {% endif %}
+       
+        <button id="start-project" type="submit" class="btn btn-success" style="width: 100%;">
           {% if not request.GET.q %}
           Add to project
           {% else %}
