--- a/templates/index.html
+++ b/templates/index.html
@@ -1,88 +1,90 @@
 {% extends "base.html" %}
-
-{# for allauth login #}
 {% load bootstrap3 %}
-{% load i18n %}
-{% load account %}
 
 {% block title %}
-Home
-{% endblock %}
-
-{% block contextbar %}
-  {# kill it on this page #}
+Welcome to Compliance Automation
 {% endblock %}
 
 {% block body-wide %}
-
-<div class="jumbotron">
-  <div class="container">
-
-    <div class="row" style="border:0px solid black;max-width: 1024px;margin:40px auto;margin-bottom:80px;">
-      {% with picture=request.organization.get_logo %}
-        {% if picture %}
-          <div class="col-md-2" style="border: 0px solid black;">
-            <img src="{{picture.url}}" class="img-responsive" alt="Profile Picture" style="">
-          </div>
-          <div class="col-md-10"  style="text-align: center; border: 0px solid black;">
-        {% else %}
-          <div class="col-md-12">
-        {% endif %}
-      {% endwith %}
-        <h1 style="margin-top:0px;">
-          {{request.organization}}
-          <div class="small">powered by GovReady Q</div>
-        </h1>
-        <p><b>Open source compliance software for everyone to innovate securely</b></p>
+    <div class="jumbotron">
+      <div class="container">
+        <h1>GovReady-Q</h1>
+        <p>Apps to help teams build and operate secure and compliant IT systems.</p>
       </div>
     </div>
 
+    <div class="container">
+        <p style="font-size: 14pt;">GovReady-Q is an open source, self-service portal to help teams build and operate compliant IT systems. GovReady-Q offers easy-to-use "compliance apps" that manage and generate documentation of your IT systems. Our vision is to make Governance, Risk and Compliance easy and pratical for small businesses, developers, managers, and others who are not security or compliance experts.</p>
 
-  <div class="row" style="margin-top: 2em">
-    <div class="col-md-6">
-			<p>Stop suffering and start answering simple questions with your teammates. We'll help you identify security risks, learn compliance controls, and prepare required documents.</p>
+        <p style="font-size: 14pt;">GovReady-Q is in public beta and recommended for innovators and early adopters interested in furthering the platform's development.</p>
+        <p>&nbsp;</p>
+
     </div>
 
-
-
-		<div class="col-md-6">
-        <div style="border: 1px solid #DDD; padding: 1em; background-color: white;">
-          <h3 style="margin-top: 0; font-weight: bold;">{% trans "Sign In" %}</h3>
-
-          {% if socialaccount.providers  %}
-          <p>{% blocktrans with site.name as site_name %}Please sign in with one
-          of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a> 
-          for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
-
-          <div class="socialaccount_ballot">
-
-            <ul class="socialaccount_providers">
-              {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-            </ul>
-
-            <div class="login-or">{% trans 'or' %}</div>
-
-          </div>
-
-          {% include "socialaccount/snippets/login_extra.html" %}
-
-          {% endif %}
-
-          {% if LOGIN_ENABLED %}
-          <form class="login" method="POST" action="{% url 'account_login' %}">
-            {% csrf_token %}
-            {% bootstrap_form login_form %}
-            <input type="hidden" name="next" value="{{request.GET.next}}" />
-            <p><button type="submit" class="primaryAction btn btn-success">{% trans "Sign In" %}</button></p>
-            <div><a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a></div>
-          </form>
-          {% endif %}
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6" style="margin-bottom: 30px;">
+                <h2>Get your organization started with GovReady</h2>
+                <form method="post">
+                    {% csrf_token %}
+                    <input type=hidden name=action value=neworg>
+                    {% if not request.user.is_authenticated %}
+                        <h3>About your organization</h3>
+                    {% endif %}
+                    {% bootstrap_form neworg_form %}
+                    {% if not request.user.is_authenticated %}
+                        <h3>About you</h3>
+                        {% bootstrap_form signup_form %}
+                    {% endif %}
+                    <p><button type="submit" class="btn btn-success">Next &raquo;</button></p>
+                </form>
+            </div>
+            <div class="col-sm-offset-1 col-sm-5">
+                <div class="well">
+                    {% if not request.user.is_authenticated %}
+                    <h2 style="margin-top: 0;">Have a {{domain}} account? Sign in.</h2>
+                    <form id="login_form" method="post">
+                        {% csrf_token %}
+                        <input type=hidden name=action value=login>
+                        {% bootstrap_form login_form %}
+                        <p><button type="submit" class="btn btn-success">Sign in &raquo;</button></p>
+                    </form>
+                    {% else %}
+                    <h2 style="margin-top: 0;">Your organizations</h2>
+                        {% if member_of_orgs %}
+                        <p>You are a member of the following organizations:</p>
+                        <ul style="padding-left: 1.33em">
+                            {% for org in member_of_orgs %}
+                                <li>{{org}}</li>
+                            {% endfor %}
+                        </ul>
+                        <p>Once you go to your organization&rsquo;s homepage, you will need to log in again.</p>
+                        {% else %}
+                            <p>You are not a member of any organizations.</p>
+                        {% endif %}
+                        <form method="post">
+                            {% csrf_token %}
+                            <input type=hidden name=action value=logout>
+                            <p>Logged in as {{request.user}}. Not you? <a href="#" onclick="$(this).parents('form').submit(); return false;">Log out</a>.</p>
+                        </form>
+                    {% endif %}
+                </div>
+            </div>
         </div>
-		</div>
+    </div>
 
-	</div>
-  </div>
-</div>
+    {{ block.super }} 
+{% endblock %}
 
-	{{ block.super }} 
+{% block scripts %}
+<script>
+$('#id_name').on('keyup', function() {
+    var slug = $(this).val();
+    slug = slug.toLowerCase().replace(/[^a-z0-9--]+/g, "-").replace(/^-+/, "").replace(/-+$/, "");
+    $('#id_subdomain').val(slug);
+})
+{% if request.method == "POST" %}
+smooth_scroll_to($('input[name=action][value={{request.POST.action|escapejs}}]').parent('form'));
+{% endif %}
+</script>
 {% endblock %}
