[WIP] Major UX improvements and convert organizations into groups
Register/login page simplified by putting register and sign in inside
a tabs and replacing jumbotron look and feel with minimal sign up and
join links.

User home /project page improved with four getting started actions
recommend on what was previously a nearly blank page; replacing
"compliance app" terminology with "project" terminology; sleeker
table-like display of started projects.

"Groups" feature to organize and manage related projects (assessments).
Goal is to eventually completely replace the previous multi-tenancy
Organization feature with a more informal and flexible "Groups" feature.
UI uses "groups" terminology while code base currently uses "org_group"
terminology to ease transition. Any user can create a group. Group names
are global across a GovReady-Q install. Groups provides a folder-like
functionality for organizing related projects.

Navbar improved with displayed links to "Projects" and "Groups";
icons for "Analytics" and "Settings"; removal of dropdown "MENU" item.

Django messages indicating successful logins/logouts now ignored in
base template. Change will hide any Django message of level "Success".
Hiding success messages removes the need to dismiss messages or fade them out.

Preserved original lifecycle interface in template project_lifecycle_original.html

Create a default org_group slug for user that is username. Test proposed
slugs based on username properly report error on name collision with
existing org_groups (e.g., a username cannot be created that conflicts
with an existing org_group (may want to white list creating of org_groups
that are common first names).

On login errors make signin tab active on page reload to display the errors.

Fix tests to login with new forms in landing page tabs

Add group slug to breadcrumbs for projects, tasks and reduce font
size of breadcrumbs. Add group slug to display of project name for
clarity. Remove "Component" from breadcrumb

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,27 +14,29 @@
           width="110px;" style="margin: -2px 20px;">
       </a>
     </div>
+
+    <div>
+      {% if request.user.is_authenticated %}
+      <ul class="nav navbar-nav navbar-left" style="color: white;">
+        <li><a href="/projects" id="menu-projects">Projects</a></li>
+        <li>&nbsp;&nbsp;&nbsp;&nbsp;</li>
+        <li><a href="/groups" id="menu-groups">Groups</a></li>
+      </ul>
+      {% endif %}
+    </div>
+
     <div id="navbar-collapse-target" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        {% if request.user.is_authenticated %}
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-              MENU
-              <span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu">
-              <li><a href="/projects">Projects</a></li>
-              <li><a href="/store">Compliance Apps</a></li>
-              {% if user.can_see_any_org_settings or user.is_staff %}
-                <li role="separator" class="divider"></li>
-                <li><a href="/settings">Settings</a></li>
-              {% endif %}
-              {% if user.is_staff %}
-                <li><a href="{% url "guidedmodules_analytics" %}">Analytics</a></li>
-              {% endif %}
-            </ul>
-          </li>
+
+        {% if user.is_staff %}
+          <li><a href="{% url "guidedmodules_analytics" %}"><span class="glyphicon glyphicon-dashboard" aria-label="Analytics" tooltip="Analytics"></span></a></li>
         {% endif %}
+        {# if user.can_see_any_org_settings or user.is_staff #}
+        {% if user.is_staff %}
+        <li><a href="/settings" id="menu-settings"><span class="glyphicon glyphicon-cog" aria-label="Settings" tooltip="Settings"></span></a></li>
+        {% endif %}
+
+        {% include "navbar-notifications.html" %}
 
         {% if request.user.is_authenticated %}
           <li class="dropdown">
@@ -55,8 +57,6 @@
               <li><a href="/accounts/logout/">Log Out</a></li>
             </ul>
           </li>
-
-          {% include "navbar-notifications.html" %}
 
         {% elif LOGIN_ENABLED %}
           <li><a href="{% url "account_login" %}">Log In</a></li>
