--- a/templates/base.html
+++ b/templates/base.html
@@ -50,10 +50,12 @@
     <div class="container-fluid" style="margin-top: 1em;">
       {% for message in messages %}
         {# Django levels are: debug (map to Boostrap 'info'), info, success, warning, error (map to Boostrap 'danger') #}
+        {% if message.level_tag != "success" %}{# Skip success messages #}
         <div class="alert fade in alert-{% if message.level_tag == "error" %}danger{% elif message.level_tag == "debug" %}info{% else %}{{message.level_tag}}{% endif %}">
             <button type="button" class="close" data-dismiss="alert">&times;</button>
             {{ message }}
         </div>
+        {% endif %}
       {% endfor %}
     </div>
     {% endif %}
