--- a/templates/index.html
+++ b/templates/index.html
@@ -6,84 +6,104 @@ Welcome to Compliance Automation
 {% endblock %}
 
 {% block body-wide %}
-    <div class="jumbotron">
-      <div class="container">
-        <h1>GovReady-Q</h1>
-        <p>Apps to help teams build and operate secure and compliant IT systems.</p>
-      </div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-7" style="margin: 40px 0px 30px 0px;">
+      <h1>GovReady-Q</h1>
+      <p>A better way to assess and support compliance</p>
+      <ul>
+        <li><a href="https://govready-q.readthedocs.io/en/latest/introduction.html#why-govready-q">Why GovReady-Q?</a></li>
+        <li><a href="https://github.com/govready/govready-q">GovReady-Q on GitHub</a></li>
+        <li><a href="https://govready-q.readthedocs.org">Technical documentation</a></li>
+      </ul>
+      <p>By signing up for and by signing in to this service you accept our:</p>
+      <ul>
+        <li><a href="/privacy">Privacy Policy</a></li>
+        <li><a href="/terms-of-service">Terms of Service</a></li>
+      </ul>
     </div>
+    <div class="col-md-5" style="margin: 40px 0px 30px 0px;">
+      <!-- Nav tabs -->
+      <ul class="nav nav-tabs" role="tablist">
+         <li id="tab-register" role="presentation" {% if request.POST.action|escapejs != 'login' %}class="active"{% endif %}><a href="#register" aria-controls="register" role="tab" data-toggle="tab">Register</a></li>
+         <li id="tab-signin" role="presentation" {% if request.POST.action|escapejs == 'login' %}class="active"{% endif %}><a href="#signin" aria-controls="signin" role="tab" data-toggle="tab">Sign in</a></li>
+      </ul>
 
-    <div class="container">
-        <p style="font-size: 14pt;">GovReady-Q is an open source, self-service portal to help teams build and operate compliant IT systems. GovReady-Q offers easy-to-use "compliance apps" that manage and generate documentation of your IT systems. Our vision is to make Governance, Risk and Compliance easy and pratical for small businesses, developers, managers, and others who are not security or compliance experts.</p>
-
-        <p style="font-size: 14pt;">GovReady-Q is in public beta and recommended for innovators and early adopters interested in furthering the platform's development.</p>
-        <p>&nbsp;</p>
-
-    </div>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6" style="margin-bottom: 30px;">
-                <h2>Get your organization started with GovReady</h2>
-                <form method="post">
-                    {% csrf_token %}
-                    <input type=hidden name=action value=neworg>
-                    {% if not request.user.is_authenticated %}
-                        <h3>About your organization</h3>
-                    {% endif %}
-                    {% bootstrap_form neworg_form %}
-                    {% if not request.user.is_authenticated %}
-                        <h3>About you</h3>
-                        {% bootstrap_form signup_form %}
-                    {% endif %}
-                    <p><button type="submit" class="btn btn-success">Next &raquo;</button></p>
-                </form>
-            </div>
-            <div class="col-sm-offset-1 col-sm-5">
-                <div class="well">
-                    {% if not request.user.is_authenticated %}
-                    <h2 style="margin-top: 0;">Have a {{domain}} account? Sign in.</h2>
-                    <form id="login_form" method="post">
-                        {% csrf_token %}
-                        <input type=hidden name=action value=login>
-                        {% bootstrap_form login_form %}
-                        <p><button type="submit" class="btn btn-success">Sign in &raquo;</button></p>
-                    </form>
-                    {% else %}
-                    <h2 style="margin-top: 0;">Your organizations</h2>
-                        {% if member_of_orgs %}
-                        <p>You are a member of the following organizations:</p>
-                        <ul style="padding-left: 1.33em">
-                            {% for org in member_of_orgs %}
-                                <li>{{org}}</li>
-                            {% endfor %}
-                        </ul>
-                        <p>Once you go to your organization&rsquo;s homepage, you will need to log in again.</p>
-                        {% else %}
-                            <p>You are not a member of any organizations.</p>
-                        {% endif %}
-                        <form method="post">
-                            {% csrf_token %}
-                            <input type=hidden name=action value=logout>
-                            <p>Logged in as {{request.user}}. Not you? <a href="#" onclick="$(this).parents('form').submit(); return false;">Log out</a>.</p>
-                        </form>
-                    {% endif %}
-                </div>
-            </div>
+      <!-- Tab panes -->
+      <div class="tab-content">
+        <div role="tabpanel" class="tab-pane {% if request.POST.action|escapejs == 'login' %}active{% endif %}" id="signin">
+          <div class="well">
+            {% if not request.user.is_authenticated %}
+            <a name="signin"></a>
+            <form id="login_form" method="post">
+              {% csrf_token %}
+              <input type=hidden name=action value=login>
+              {% bootstrap_form login_form %}
+              <p><button type="submit" class="btn btn-success">Sign in &raquo;</button></p>
+            </form>
+            {% else %}
+            <h2 style="margin-top: 0;">Your organizations</h2>
+            {% if member_of_orgs %}
+            <p>You are a member of the following organizations:</p>
+            <ul style="padding-left: 1.33em">
+              {% for org in member_of_orgs %}
+                <li>{{org}}</li>
+              {% endfor %}
+            </ul>
+            <p>Once you go to your organization&rsquo;s homepage, you will need to log in again.</p>
+            {% else %}
+            <p>You are not a member of any organizations.</p>
+            {% endif %}
+            <form method="post">
+              {% csrf_token %}
+              <input type=hidden name=action value=logout>
+              <p>Logged in as {{request.user}}. Not you? <a href="#" onclick="$(this).parents('form').submit(); return false  ;">    Log out</a>.</p>
+            </form>
+            {% endif %}
+          </div>
         </div>
+        <div role="tabpanel" class="tab-pane {% if request.POST.action|escapejs != 'login' %}active{% endif %}" id="register">
+          <div class="well">
+            <form method="post">
+              {% csrf_token %}
+              <input type=hidden name=action value=neworg>
+              {% if not request.user.is_authenticated %}
+                {% bootstrap_form signup_form %}
+              {% endif %}
+              {% bootstrap_form neworg_form %}
+              <p><button type="submit" class="btn btn-success">Next &raquo;</button></p>
+            </form>
+          </div>
+        </div>
+      </div><!-- /Tab panes -->
     </div>
+  </div>
+</div>
 
-    {{ block.super }} 
+  {{ block.super }} 
 {% endblock %}
 
 {% block scripts %}
 <script>
-$('#id_name').on('keyup', function() {
-    var slug = $(this).val();
-    slug = slug.toLowerCase().replace(/[^a-z0-9--]+/g, "-").replace(/^-+/, "").replace(/-+$/, "");
-    $('#id_subdomain').val(slug);
+
+// Copy any changes in username to username's default group slug
+$('#id_username').on('keyup', function() {
+  var slug = $(this).val();
+  slug = slug.toLowerCase().replace(/[^a-z0-9--]+/g, "-").replace(/^-+/, "").replace(/-+$/, "");
+  $('#id_name').val(slug);
+  $('#id_slug').val(slug);
 })
+// And if typing changes default group slug, force changes back into username
+$('#id_slug').on('keyup', function() {
+  var slug = $(this).val();
+  slug = slug.toLowerCase().replace(/[^a-z0-9--]+/g, "-").replace(/^-+/, "").replace(/-+$/, "");
+  $('#id_name').val(slug);
+  $('#id_username').val(slug);
+})
+
 {% if request.method == "POST" %}
+
 smooth_scroll_to($('input[name=action][value={{request.POST.action|escapejs}}]').parent('form'));
 {% endif %}
 </script>
