authoring tool 'new question' broke after 0e9671f8
In 0e9671f8, I removed code that handled an old or unused condition where a single protocol ID on a question could be specified either as a simple string or as a one-item list containing a string. When the authoring tool is used to add a new question to a project-type module, it adds a question with a dummy protocol as a simple string (not as a list). As a result, the app catalog crashed.

This commit changes the authoring tool to set the question's protocol to a list containing the string.

Although in module YAML files on disk the author can give a protocol as a string or as a list of strings, when we load YAML files into the database we alwys convert single strings into one-item lists, so that the protocol value is uniformly a list (see 90930b00). The code that I had deleted in the app catalog doesn't appear to ever have actually been necessary, and the authoring tool was always creating an incorrect value for protocol in the database, but with both errors together it worked.

Fixes #631.

--- a/templates/authoring-tool-modal.html
+++ b/templates/authoring-tool-modal.html
@@ -4,12 +4,22 @@
 * Add "left" or "right" in modal parent div, after class="modal".
 *******************************/
 
+
+/* remove modal shadow */
+div.modal-content{
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    -o-box-shadow: none;
+    box-shadow: none;
+    border: 1px solid rgb(220, 220, 220);
+}
+
 .modal.left .modal-dialog,
   .modal.right .modal-dialog {
     position: fixed;
     margin: auto;
     width: 440px;
-    height: 100%;
+    height: calc(100% - 53px);
     -webkit-transform: translate3d(0%, 0, 0);
         -ms-transform: translate3d(0%, 0, 0);
          -o-transform: translate3d(0%, 0, 0);
@@ -43,10 +53,11 @@
 /*Right*/
   .modal.right.fade .modal-dialog {
     right: -320px;
-    -webkit-transition: opacity 0.2s linear, right 0.2s ease-out;
-       -moz-transition: opacity 0.2s linear, right 0.2s ease-out;
-         -o-transition: opacity 0.2s linear, right 0.2s ease-out;
-            transition: opacity 0.2s linear, right 0.2s ease-out;
+    top:53px;
+    -webkit-transition: opacity 0.0s linear, right 0.0s ease-out;
+       -moz-transition: opacity 0.0s linear, right 0.0s ease-out;
+         -o-transition: opacity 0.0s linear, right 0.0s ease-out;
+            transition: opacity 0.0s linear, right 0.0s ease-out;
   }
 
   .modal.right.fade.in .modal-dialog {
@@ -75,7 +86,7 @@ label {
 }
 </style>
 
-<div id="module_authoring_tool" class="modal" tabindex="-1" role="dialog" aria-labelledby="module_authoring_tool_title" aria-hidden="true" data-keyboard="false">
+<div id="module_authoring_tool" class="modal right fade" tabindex="-1" role="dialog" aria-labelledby="module_authoring_tool_title" aria-hidden="true" data-keyboard="false" data-backdrop="false">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
@@ -111,7 +122,7 @@ label {
   </div>
 </div>
 
-<div id="question_authoring_tool" class="modal right fade" tabindex="-1" role="dialog" aria-labelledby="question_authoring_tool_title" aria-hidden="true" data-keyboard="false" style="right: -55%;">
+<div id="question_authoring_tool" class="modal right fade" tabindex="-1" role="dialog" aria-labelledby="question_authoring_tool_title" aria-hidden="true" data-keyboard="false" data-backdrop="false" style="right: -55%;">
   <div class="modal-dialog modal-md">
     <div class="modal-content">
       <form class="form-horizontal" onsubmit="return false;">
