--- a/templates/projects.html
+++ b/templates/projects.html
@@ -190,7 +190,7 @@ h1.mini {
           <div class="glyphicon glyphicon-heart-empty"></div>
         </div>
         <div class="col-md-9">
-          <h3><a href="">Fall in love with assessments</a></h3>
+          <h3><a href="love-assessments">Fall in love with assessments</a></h3>
           <p>Assessing, learning, and improving is one of the most powerful things about being  human.
           </p>
         </div>
