first pass at html changes on 0.9.0

--- a/discussion/templates/discussion/discussion.html
+++ b/discussion/templates/discussion/discussion.html
@@ -178,14 +178,14 @@
           </div>
           <div class="col-sm-3 comment-commands">
             <a title="Edit your comment" class="ifeditpriv" href="#" onclick="return begin_comment_edit(this);">
-              <i class="glyphicon glyphicon-pencil"></i>
+              <em class="glyphicon glyphicon-pencil"></em>
             </a>
             <a title="Delete this comment" class="ifdeletepriv" href="#" onclick="return do_delete_comment(this);">
-              <i class="glyphicon glyphicon-trash"></i>
+              <em class="glyphicon glyphicon-trash"></em>
             </a>
             <a title="React to this comment with an emoji" class="react-with-emoji" href="#" onclick="return begin_emoji_reaction(event, this);">
-              <i class="glyphicon glyphicon-plus" style="font-size: 80%;"></i>
-              <i class="glyphicon glyphicon-heart" style="position: relative; left: -6px"></i>
+              <em class="glyphicon glyphicon-plus" style="font-size: 80%;"></em>
+              <em class="glyphicon glyphicon-heart" style="position: relative; left: -6px"></em>
             </a>
           </div>
         </div> <!-- /row -->
@@ -259,7 +259,7 @@
       <button type="button" class="close" aria-label="Close" onclick="save_emoji_reaction()">
         <span aria-hidden="true">&times;</span>
       </button>
-      <b>React with an emoji</b>
+      <strong>React with an emoji</strong>
     </div>
     <div class="panel-body">
       <div>
