--- a/templates/app-store-item.html
+++ b/templates/app-store-item.html
@@ -51,7 +51,7 @@
   <div class="col-sm-3 col-sm-pull-9">
     <div style="padding-right: 1em">
       {% if app.icon %}
-        <img src="{{app.icon}}" style="width: 100%;">
+        <img src="{{app.icon}}" style="width: 100%;" alt= "App Icon">
       {% endif %}
 
       <form method="post" style="margin: 1em; text-align: center;">
