--- a/templates/email/invitation.html
+++ b/templates/email/invitation.html
@@ -107,7 +107,7 @@ h3 {
 
     <td>
       <div id="focus-area-wrapper">
-        <h1>{{invitation.from_user}} invited you <b>{{invitation.purpose}}</b> on <b>GovReady Q</b></h1>
+        <h1>{{invitation.from_user}} invited you <strong>{{invitation.purpose}}</strong> on <strong>GovReady Q</strong></h1>
 
         <div id="cta">
           <a href="{{invitation.get_acceptance_url}}">
