--- a/templates/email/template.html
+++ b/templates/email/template.html
@@ -23,7 +23,7 @@ a {
 {% block content %}
 {% endblock %}
 
-<p>GovReady <b>Q</b></p>
+<strong>GovReady </strong>Q</b></p>
 
 <div style="margin-top: 1em; font-size: 85%; color: #555">
 {% block after_signature_note %}
