--- a/templates/module-finished.html
+++ b/templates/module-finished.html
@@ -159,7 +159,7 @@
 
   {% if can_review %}
     <p><a href="{{task.project.get_absolute_url}}/list#task-{{task.id}}" class="btn btn-default">
-      <i class="glyphicon glyphicon-list"></i>
+      <em class="glyphicon glyphicon-list"></em>
       Review &raquo;
     </a></p>
   {% endif %}
