--- a/templates/project-list-answers.html
+++ b/templates/project-list-answers.html
@@ -44,7 +44,7 @@ h2 { margin-top: 1.5em; }
         <a href="{{section.task.get_absolute_url}}" style="color: #224;">
         
         {% if section.task.get_app_icon_url %}
-          <img src="{{section.task.get_app_icon_url}}" style="height: 1em">
+          <img src="{{section.task.get_app_icon_url}}" style="height: 1em" alt="App Icon">
         {% else %}
           <span class="glyphicon glyphicon-list-alt"></span>
         {% endif %}
