--- a/templates/question.html
+++ b/templates/question.html
@@ -192,7 +192,7 @@ label:hover .onhover { display: inline; }
                 </a>
               </p>
               <div id="reference-text" style="display: none; font-size: 80%;" class="well">
-                <p><b><small>Additional Information</small></b></p>
+                <p><strong><small>Additional Information</small></strong></p>
                 {{reference_text|safe}}
               </div>
             {% endif %}
