--- a/templates/invitation.html
+++ b/templates/invitation.html
@@ -30,7 +30,7 @@ h1 { margin-top: 0; }
   {% endwith %}
 
    <div id="focus-area-wrapper">
-      <h1><b>{{inv.from_user}}</b> invited you <b>{{inv.purpose}}</b> on <b>GovReady Q</b></h1>
+      <h1><strong>{{inv.from_user}}</strong> invited you <strong>{{inv.purpose}}</strong> on <strong>GovReady Q</strong></h1>
 
       <div style="margin-top: 2em;">
         <p>On {{inv.created|date}} {{inv.from_user}} emailed:</p>
