--- a/templates/project-base.html
+++ b/templates/project-base.html
@@ -79,7 +79,7 @@ div.subtitle {
       {% endblock %}
 
       {% if project.root_task.get_app_icon_url %}
-        <img id="project-icon" src="{{project.root_task.get_app_icon_url}}">
+        <img id="project-icon" src="{{project.root_task.get_app_icon_url}}" alt="Project Icon">
       {% endif %}
 
       {% with project.title as title %}
