--- a/templates/project-startapps.html
+++ b/templates/project-startapps.html
@@ -68,7 +68,7 @@
               <tr valign="top">
                 {% if app.icon %}
                   <td class="app-icon" style="padding-top: 1px; padding-right: 12px;">
-                    <img src="{{app.icon}}" class="img-responsive"">
+                    <img src="{{app.icon}}" class="img-responsive" alt="App Icon">
                   </td>
                 {% endif %}
                 <td>
