Add Portfolio functionality

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,7 +20,7 @@
         {% if request.user.is_authenticated %}
           <li><a href="/projects" id="menu-projects">Projects</a></li>
           <li>&nbsp;&nbsp;&nbsp;&nbsp;</li>
-          <li><a href="/groups" id="menu-groups">Groups</a></li>
+          <li><a href="/portfolios" id="menu-portfolios">Portfolios</a></li>
         {% endif %}
       </ul>
 
