--- a/templates/projects.html
+++ b/templates/projects.html
@@ -176,8 +176,8 @@ Your Compliance Projects
           <div class="glyphicon glyphicon glyphicon-folder-open"></div>
         </div>
         <div class="col-md-9">
-          <h3><a href="/groups/new">Create a group</a></h3>
-          <p>Groups are a way to organize and manage related projects.
+          <h3><a href="/portfolios/new">Create a Portfolio</a></h3>
+          <p>Portfolios are a way to organize and manage related projects.
           </p>
         </div>
       </div>
