--- a/templates/project-base.html
+++ b/templates/project-base.html
@@ -82,6 +82,7 @@ div.subtitle {
         <img id="project-icon" src="{{project.root_task.get_app_icon_url}}" alt="Project Icon">
       {% endif %}
 
+      {% if project.organization %}
       {% with project.title as title %}
       <h1 id="project-title">
         {{project.organization.name}} / 
@@ -96,7 +97,7 @@ div.subtitle {
       </div>
       {% endif %}
       {% endwith %}
-
+      {% endif %}
       <div class="clearfix"></div>
 
       {% if project.lifecycle_stage %}
