style users section

--- a/templates/portfolios/detail.html
+++ b/templates/portfolios/detail.html
@@ -93,33 +93,37 @@ Remove contextbar from top of page
         </div>
       </div>
       {% endif %}
-      <p> <b>Users With Access:</b></p>
-      {% for user in users_with_perms %}
-      <p class="inline"> {{user.name}} </span>
-        {% if user.owner %}
-        (Owner)
-      </p>
-      {% elif can_invite_to_portfolio %}
-      <form name="assign_owner_permissions" method="post" action="{% url 'update_permissions' %}" class="inline">
-        {% csrf_token %}
-        <input type="hidden" id="portfolio_id" name="portfolio_id" value={{portfolio.id}}>
-        <input type="hidden" id="user_id" name="user_id" value={{user.id}}>
-        <input type="hidden" id="permission" name="permission" value="remove_permissions">
-        <input type="hidden" name="next" value="{{ request.path }}">
-        <input type="submit" value="Remove" class="btn btn-sm btn-danger" />
-      </form>
-      <form name="assign_owner_permissions" method="post" action="{% url 'update_permissions' %}" class="inline">
-        {% csrf_token %}
-        <input type="hidden" id="portfolio_id" name="portfolio_id" value={{portfolio.id}}>
-        <input type="hidden" id="user_id" name="user_id" value={{user.id}}>
-        <input type="hidden" id="permission" name="permission" value="grant_owner_permission">
-        <input type="hidden" name="next" value="{{ request.path }}">
-        <input type="submit" value="Make Owner" class="btn btn-sm btn-success" />
-      </form>
-      {%endif%}
-      </p>
-      {% endfor %}
 
+      <div class="container">
+        <div class="row" style="margin-top: 60px;">
+          <p> <b>Users With Access:</b></p>
+          {% for user in users_with_perms %}
+          <p class="inline"> {{user.name}}
+            {% if user.owner %}
+            (Owner)
+          </p>
+          {% elif can_invite_to_portfolio %}
+          <form name="assign_owner_permissions" method="post" action="{% url 'update_permissions' %}" class="inline">
+            {% csrf_token %}
+            <input type="hidden" id="portfolio_id" name="portfolio_id" value={{portfolio.id}}>
+            <input type="hidden" id="user_id" name="user_id" value={{user.id}}>
+            <input type="hidden" id="permission" name="permission" value="remove_permissions">
+            <input type="hidden" name="next" value="{{ request.path }}">
+            <input type="submit" value="Remove" class="btn btn-sm btn-danger" />
+          </form>
+          <form name="assign_owner_permissions" method="post" action="{% url 'update_permissions' %}" class="inline">
+            {% csrf_token %}
+            <input type="hidden" id="portfolio_id" name="portfolio_id" value={{portfolio.id}}>
+            <input type="hidden" id="user_id" name="user_id" value={{user.id}}>
+            <input type="hidden" id="permission" name="permission" value="grant_owner_permission">
+            <input type="hidden" name="next" value="{{ request.path }}">
+            <input type="submit" value="Make Owner" class="btn btn-sm btn-success" />
+          </form>
+          {%endif%}
+          </p>
+          {% endfor %}
+        </div>
+      </div>
       {{ block.super }}
       {% endblock %}
 
