add initial tests for Portfolios

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@ Welcome to Compliance Automation
                 {% bootstrap_form signup_form %}
               {% endif %}
               {% bootstrap_form portfolio_form %}
-              <p><button type="submit" class="btn btn-success">Next &raquo;</button></p>
+              <p><button type="submit" id="signup-button" class="btn btn-success">Next &raquo;</button></p>
             </form>
           </div>
         </div>
